<resources>
    <string name="app_name">Amazon</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="existing_user_login">Existing user? Login</string>
    <string name="age">Age</string>
    <string name="gender">gender</string>
    <string name="click">click</string>
    <string name="what_is_a_capital_city_of_tamilnadu">What is a Capital City Of TamilNadu</string>
    <string name="kovai">kovai</string>
    <string name="mobiledataoff">mobileDataOff</string>
    <string name="mobiledataon">mobileDataOn</string>
    <string name="mobiledata">mobiledata</string>
    <string name="mobileData">mobileData</string>
    <string name="mobileDataoff">mobileDataoff</string>
    <string name="mobileDataOff">mobileDataOff</string>
    <string name="mobileDataOn">mobileDataOn</string>
    <string name="title_activity_image_button">ImageButtonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lancher">LancherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_your_name">Enter your Name</string>

    <string-array name="technologies">
        <item>None</item>
        <item> Java </item>
        <item> Kotlin </item>
        <item> C </item>
        <item> C++ </item>
        <item>JavaScript</item>
        <item>Python</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>